{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 18,
  "lineage": "b0aedfb3-f353-61e4-d7e0-ebcd07419c1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:820198200129:instance/i-06a72603fa1905b50",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a72603fa1905b50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "tauanpro-rsa-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08ec8739accdb0c89",
            "private_dns": "ip-10-0-14-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.14.24",
            "public_dns": "ec2-44-211-216-54.compute-1.amazonaws.com",
            "public_ip": "44.211.216.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0018dc7ccb1f7fe32",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-01ccf6afce144e09d",
            "tags": {
              "Name": "k8s-cluster-control-plane",
              "Role": "control-plane"
            },
            "tags_all": {
              "Name": "k8s-cluster-control-plane",
              "Role": "control-plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4dca1e7efc72ddf"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.k8s_igw",
            "aws_security_group.k8s_sg",
            "aws_subnet.public",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:820198200129:instance/i-06d1255a86994506e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d1255a86994506e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "tauanpro-rsa-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b165ae71ad6ed8f",
            "private_dns": "ip-10-0-46-118.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.46.118",
            "public_dns": "ec2-3-83-201-254.compute-1.amazonaws.com",
            "public_ip": "3.83.201.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e3ca4efe99e06275",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-01ccf6afce144e09d",
            "tags": {
              "Name": "k8s-cluster-worker-1",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "k8s-cluster-worker-1",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4dca1e7efc72ddf"
            ]
          },
          "dependencies": [
            "aws_instance.control_plane",
            "aws_internet_gateway.k8s_igw",
            "aws_security_group.k8s_sg",
            "aws_subnet.public",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:820198200129:instance/i-03051eb9e5eaf0759",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03051eb9e5eaf0759",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "tauanpro-rsa-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0449b3003d51cc1e5",
            "private_dns": "ip-10-0-5-62.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.62",
            "public_dns": "ec2-54-89-228-23.compute-1.amazonaws.com",
            "public_ip": "54.89.228.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c9cd9481ed7697b7",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-01ccf6afce144e09d",
            "tags": {
              "Name": "k8s-cluster-worker-2",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "k8s-cluster-worker-2",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4dca1e7efc72ddf"
            ]
          },
          "dependencies": [
            "aws_instance.control_plane",
            "aws_internet_gateway.k8s_igw",
            "aws_security_group.k8s_sg",
            "aws_subnet.public",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:820198200129:instance/i-019062f9e8e776773",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019062f9e8e776773",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "tauanpro-rsa-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d107ff7b09acc4f",
            "private_dns": "ip-10-0-25-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.25.238",
            "public_dns": "ec2-44-202-241-60.compute-1.amazonaws.com",
            "public_ip": "44.202.241.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-098741bdf2aabe6c8",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-01ccf6afce144e09d",
            "tags": {
              "Name": "k8s-cluster-worker-3",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "k8s-cluster-worker-3",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4dca1e7efc72ddf"
            ]
          },
          "dependencies": [
            "aws_instance.control_plane",
            "aws_internet_gateway.k8s_igw",
            "aws_security_group.k8s_sg",
            "aws_subnet.public",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820198200129:internet-gateway/igw-09ab078fe194d80ef",
            "id": "igw-09ab078fe194d80ef",
            "owner_id": "820198200129",
            "tags": {
              "Name": "k8s-cluster-igw"
            },
            "tags_all": {
              "Name": "k8s-cluster-igw"
            },
            "vpc_id": "vpc-03d73035fe1bd0f20"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820198200129:route-table/rtb-0008248ee347b0454",
            "id": "rtb-0008248ee347b0454",
            "owner_id": "820198200129",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09ab078fe194d80ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-cluster-public-rt"
            },
            "tags_all": {
              "Name": "k8s-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d73035fe1bd0f20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k8s_igw",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db7def71af255706",
            "route_table_id": "rtb-0008248ee347b0454",
            "subnet_id": "subnet-01ccf6afce144e09d"
          },
          "dependencies": [
            "aws_internet_gateway.k8s_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.k8s_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820198200129:security-group/sg-0d4dca1e7efc72ddf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4dca1e7efc72ddf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 10251,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10259
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 4240,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4240
              }
            ],
            "name": "k8s-cluster-20260201162918791900000001",
            "name_prefix": "k8s-cluster-",
            "owner_id": "820198200129",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-cluster-sg"
            },
            "tags_all": {
              "Name": "k8s-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d73035fe1bd0f20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820198200129:subnet/subnet-01ccf6afce144e09d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ccf6afce144e09d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "820198200129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-cluster-public-subnet"
            },
            "tags_all": {
              "Name": "k8s-cluster-public-subnet"
            },
            "vpc_id": "vpc-03d73035fe1bd0f20"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820198200129:vpc/vpc-03d73035fe1bd0f20",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f27ea94e9faefa75",
            "default_route_table_id": "rtb-0e17cb9680b895a5e",
            "default_security_group_id": "sg-02bea64744f514d58",
            "dhcp_options_id": "dopt-049a7a7168e3246d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d73035fe1bd0f20",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e17cb9680b895a5e",
            "owner_id": "820198200129",
            "tags": {
              "Environment": "k8s-cluster",
              "Name": "k8s-cluster-vpc"
            },
            "tags_all": {
              "Environment": "k8s-cluster",
              "Name": "k8s-cluster-vpc"
            }
          }
        }
      ]
    }
  ]
}